fixed horizontal scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,7 @@
  
 body {
     @apply bg-white text-black dark:bg-gray-900 dark:text-white;
+    overflow-x: hidden;
   }
 
   /* For ScrollBar */
